--- a/freelance.html
+++ b/freelance.html
@@ -77,6 +77,9 @@
 									<li>LinkedIn Recruiter</li>
 									<li>Photoshop</li>
 									<li>MS Office</li>
+									<li>Airtable</li>
+									<li>Make Integromat</li>
+									<li>Zapier</li>
 									
 								</ul>
 							</p>
