--- a/freelance.html
+++ b/freelance.html
@@ -80,7 +80,10 @@
 									<li>Airtable</li>
 									<li>Make Integromat</li>
 									<li>Zapier</li>
-									
+									<li>System.io</li>
+									<li>ChatGPT</li>
+									<li>Time Doctor & Hubstaff</li>
+									<li>GHL</li>
 								</ul>
 							</p>
 						</div>
